--- a/ejemplo.html
+++ b/ejemplo.html
@@ -25,7 +25,7 @@
             </div>
             <div>
                 <label for="Clave">Contraseña</label>
-                <input type="text" name="Password" id="Clave">
+                <input type="password" name="Password" id="Clave">
             </div>
             <div>
                 <label for="Archivo">Archivo</label>
