--- a/Tp05.html
+++ b/Tp05.html
@@ -131,7 +131,8 @@
             <tr>
                 <td>103</td>
                 <td>Early Hints</td>
-                <td>Permite que el agente de usuario empiece a pre-cargar recursos mientras el servidor prepara una respuesta.</td>
+                <td>Permite que el agente de usuario empiece a pre-cargar recursos mientras el servidor prepara una
+                    respuesta.</td>
             </tr>
             <tr>
                 <th rowspan="10">Respuestas satisfactorias (200–299)</th>
@@ -152,7 +153,8 @@
             <tr>
                 <td>203</td>
                 <td> Non-Authoritative Information</td>
-                <td>La petición se ha completado con éxito, pero su contenido no se ha obtenido de la fuente originalmente solicitada.</td>
+                <td>La petición se ha completado con éxito, pero su contenido no se ha obtenido de la fuente
+                    originalmente solicitada.</td>
             </tr>
             <tr>
                 <td>204</td>
@@ -182,13 +184,263 @@
             <tr>
                 <td>226</td>
                 <td>IM Used</td>
-                <td></td>
+                <td>El servidor ha cumplido una petición GET para el recurso y la respuesta es una representación del
+                    resultado </td>
             </tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
+            <tr>
+                <th rowspan="9">Redirecciones (300–399)</th>
+                <td>300</td>
+                <td>Multiple Choices</td>
+                <td>User-Agent o el usuario debe escoger uno de ellos.</td>
+            </tr>
+            <tr>
+                <td>301</td>
+                <td>Moved Permanently.</td>
+                <td> significa que la URI del recurso solicitado ha sido cambiado.</td>
+            </tr>
+            <tr>
+                <td>302</td>
+                <td>Found</td>
+                <td>significa que el recurso de la URI solicitada ha sido cambiado temporalmente. </td>
+            </tr>
+            <tr>
+                <td>303</td>
+                <td>See Other</td>
+                <td>El servidor envía esta respuesta para dirigir al cliente a un nuevo recurso solicitado a otra
+                    dirección usando una petición GET.</td>
+            </tr>
+            <tr>
+                <td>304</td>
+                <td>Not Modified</td>
+                <td>Esta es usada para propósitos de "caché". Le indica al cliente que la respuesta no ha sido
+                    modificada.</td>
+            </tr>
+            <tr>
+                <td>305</td>
+                <td>Use Proxy</td>
+                <td>indica que una respuesta solicitada debe ser accedida desde un proxy. </td>
+            </tr>
+            <tr>
+                <td>306</td>
+                <td>Unused</td>
+                <td>Este código de respuesta ya no es usado más. Actualmente se encuentra reservado.</td>
+            </tr>
+            <tr>
+                <td>307</td>
+                <td>Temporary Redirect
+                </td>
+                <td>El servidor envía esta respuesta para dirigir al cliente a obtener el recurso solicitado a otra URI
+                    con el mismo método que se usó la petición anterior.</td>
+            </tr>
+            <tr>
+                <td>308</td>
+                <td>Permanent Redirect</td>
+                <td>Significa que el recurso ahora se encuentra permanentemente en otra URI, especificada por la
+                    respuesta de encabezado HTTP Location:.</td>
+            </tr>
+            <tr>
+                <th rowspan="28">Errores de los clientes (400–499)</th>
+                <td>400</td>
+                <td>Petición mala</td>
+                <td>Esta respuesta significa que el servidor no pudo interpretar la solicitud dada una sintaxis
+                    inválida.</td>
+            </tr>
+            <tr>
+                <td>401</td>
+                <td>Unauthorized</td>
+                <td>Es necesario autenticar para obtener la respuesta solicitada. Esta es similar a 403, pero en este
+                    caso, la autenticación es posible.</td>
+            </tr>
+            <tr>
+                <td>402</td>
+                <td>Payment Required</td>
+                <td>Este código de respuesta está reservado para futuros usos.</td>
+            </tr>
+            <tr>
+                <td>403</td>
+                <td>Forbidden</td>
+                <td>El cliente no posee los permisos necesarios para cierto contenido, por lo que el servidor está
+                    rechazando otorgar una respuesta apropiada.</td>
+            </tr>
+            <tr>
+                <td>404</td>
+                <td>Not Found</td>
+                <td>El servidor no pudo encontrar el contenido solicitado.</td>
+            </tr>
+            <tr>
+                <td>405</td>
+                <td>Method Not Allowed</td>
+                <td>El método solicitado es conocido por el servidor pero ha sido deshabilitado y no puede ser
+                    utilizado.</td>
+            </tr>
+            <tr>
+                <td>406</td>
+                <td>Not Acceptable</td>
+                <td>Esta respuesta es enviada cuando el servidor, después de aplicar una negociación de contenido</td>
+            </tr>
+            <tr>
+                <td>407</td>
+                <td>Proxy Authentication Required</td>
+                <td>Esto es similar al código 401, pero la autenticación debe estar hecha a partir de un proxy.</td>
+            </tr>
+            <tr>
+                <td>408</td>
+                <td>Request Timeout</td>
+                <td>Significa que el servidor quiere desconectar esta conexión sin usar.</td>
+            </tr>
+            <tr>
+                <td>409</td>
+                <td>Conflict</td>
+                <td>Esta respuesta puede ser enviada cuando una petición tiene conflicto con el estado actual del servidor.</td>
+            </tr>
+            <tr>
+                <td>410</td>
+                <td>Gone</td>
+                <td>Esta respuesta puede ser enviada cuando el contenido solicitado ha sido borrado del servidor.</td>
+            </tr>
+            <tr>
+                <td>411</td>
+                <td>Length Required</td>
+                <td>El servidor rechaza la petición porque el campo de encabezado Content-Length no esta definido y el servidor lo requiere.</td>
+            </tr>
+            <tr>
+                <td>412</td>
+                <td>Precondition Failed</td>
+                <td>El cliente ha indicado pre-condiciones en sus encabezados la cual el servidor no cumple.</td>
+            </tr>
+            <tr>
+                <td>413</td>
+                <td>Content Too Large</td>
+                <td>La entidad de petición es más larga que los límites definidos por el servidor; el servidor puede cerrar la conexión o retornar un campo de encabezado Retry-After.</td>
+            </tr>
+            <tr>
+                <td>414</td>
+                <td>URI Too Long</td>
+                <td>La URI solicitada por el cliente es más larga de lo que el servidor está dispuesto a interpretar.</td>
+            </tr>
+            <tr>
+                <td>415</td>
+                <td>Unsupported Media Type</td>
+                <td>El formato multimedia de los datos solicitados no está soportado por el servidor, por lo cual el servidor rechaza la solicitud.</td>
+            </tr>
+            <tr>
+                <td>416</td>
+                <td>Range Not Satisfiable</td>
+                <td>El rango especificado por el campo de encabezado Range en la solicitud no cumple; es posible que el rango está fuera del tamaño de los datos objetivo del URI.</td>
+            </tr>
+            <tr>
+                <td>417</td>
+                <td>Expectation Failed</td>
+                <td>Significa que la expectativa indicada por el campo de encabezado Expect solicitada no puede ser cumplida por el servidor.</td>
+            </tr>
+            <tr>
+                <td>418</td>
+                <td>I´m a teapot</td>
+                <td>El servidor se rehúsa a intentar hacer café con una tetera.</td>
+            </tr>
+            <tr>
+                <td>421</td>
+                <td>Misdirected Request</td>
+                <td>La petición fue dirigida a un servidor que no es capaz de producir una respuesta.</td>
+            </tr>
+            <tr>
+                <td>422</td>
+                <td>Unprocessable Content</td>
+                <td>La petición estaba bien formada pero no se pudo seguir debido a errores de semántica.</td>
+            </tr>
+            <tr>
+                <td>423</td>
+                <td>Locked</td>
+                <td>El recurso que está siendo accedido está bloqueado.</td>
+            </tr>
+            <tr>
+                <td>424</td>
+                <td>Failed Dependency</td>
+                <td>La petición falló debido a una falla de una petición previa.
+            <tr>
+                <td>426</td>
+                <td>Upgrade Required</td>
+                <td>El servidor se rehúsa a aplicar la solicitud usando el protocolo actual pero puede estar dispuesto a hacerlo después que el cliente se actualice a un protocolo diferente.</td>
+            </tr>
+            <tr>
+                <td>428</td>
+                <td>Precondition Required</td>
+                <td>El servidor origen requiere que la solicitud sea condicional.</td>
+            </tr>
+            <tr>
+                <td>429</td>
+                <td>Too Many Requests</td>
+                <td>El usuario ha enviado demasiadas solicitudes en un periodo de tiempo dado.</td>
+            </tr>
+            <tr>
+                <td>431</td>
+                <td>Request Header Fields Too Large</td>
+                <td>El servidor no está dispuesto a procesar la solicitud porque los campos de encabezado son demasiado largos. </td>
+            </tr>
+            <tr>
+                <td>451</td>
+                <td>Unavailable For Legal Reasons</td>
+                <td>El usuario solicita un recurso ilegal, como alguna página web censurada por algún gobierno.</td>
+            </tr>
+            <tr>
+                <th rowspan="11">Errores de servidor</th>
+                <td>500</td>
+                <td> Internal Server Error</td>
+                <td>El servidor ha encontrado una situación que no sabe cómo manejarla.</td>
+            </tr>
+            <tr>
+                <td>501</td>
+                <td>Not Implemented</td>
+                <td>El método solicitado no está soportado por el servidor y no puede ser manejado.</td>
+            </tr>
+            <tr>
+                <td>502</td>
+                <td>Bad Gateway</td>
+                <td>significa que el servidor, mientras trabaja como una puerta de enlace para obtener una respuesta necesaria para manejar la petición, obtuvo una respuesta inválida.</td>
+            </tr>
+            <tr>
+                <td>503</td>
+                <td>Service Unavailable</td>
+                <td>El servidor no está listo para manejar la petición. Causas comunes puede ser que el servidor está caído por mantenimiento o está sobrecargado.</td>
+            </tr>
+            <tr>
+                <td>504</td>
+                <td>Gateway Timeout</td>
+                <td>Esta respuesta de error es dada cuando el servidor está actuando como una puerta de enlace y no puede obtener una respuesta a tiempo.</td>
+            </tr>
+            <tr>
+                <td>505</td>
+                <td>HTTP Version Not Supported</td>
+                <td>La versión de HTTP usada en la petición no está soportada por el servidor.</td>
+            </tr>
+            <tr>
+                <td>506</td>
+                <td>Variant Also Negotiates</td>
+                <td>El servidor tiene un error de configuración interna: negociación de contenido transparente para la petición resulta en una referencia circular.</td>
+            </tr>
+            <tr>
+                <td>507</td>
+                <td>Insufficient Storage</td>
+                <td>El servidor tiene un error de configuración interna.</td>
+            </tr>
+            <tr>
+                <td>508</td>
+                <td>Loop Detected</td>
+                <td>El servidor detectó un ciclo infinito mientras procesaba la solicitud.
+
+                </td>
+            </tr>
+            <tr>
+                <td>510</td>
+                <td>Not Extended</td>
+                <td>Extensiones adicionales para la solicitud son requeridas para que el servidor las cumpla.</td>
+            </tr>
+            <tr>
+                <td>511</td>
+                <td>Network Authentication Required</td>
+                <td>El código de estado 511 indica que el cliente necesita autenticar para obtener acceso a la red.</td>
+            </tr>
+            
         </table>
 
     </main>
