--- a/formulario.html
+++ b/formulario.html
@@ -77,13 +77,25 @@
             <option value="Tucuman">Tucuman</option>
             </select required>
         </div>
-        <label for="Marca">Nike</label>
-        <input type="radio" id="Nike" name="Nike">
-        </div>
+        <label for="marca">¿Cual es tu marca favorita?</label>
+        <select name="marcas" id="marca">
+
+            <option value="Nike">Nike</option>
+            <option value="Adidas">Adidas</option>
+            <option value="Puma">Puma</option>
+        </select>
         <div>
-            <label for="Marca">Adidas</label>
-            <input type="radio" id="Adidas" name="Adidas">    
+         <label for="info"> Comentario </label>
+         <textarea name="info" id="info" cols="30" rows="10"></textarea>
+        
         </div>
+         <div>
+            <label for="">Enviar</label>
+            <input type="submit" name="" id="">
+         </div>
         </main>
+        <footer>
+            <h3>Tiziano Contreras 4°1°</h3>
+        </footer>
 </body>
 </html>
